--- a/form&input.html
+++ b/form&input.html
@@ -4,29 +4,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>form_表单</title>
+    <title>form & input</title>
     <link rel="stylesheet" href="css/index_form.css">
 </head>
-
 <body>
-    <form action="a" method="GET"></form>
+    <form action="a" method="GET">
         <div class="float">
             <img src="https://www.baidu.com/img/PCtm_d9c8750bed0b3c7d089fa7d55720d6cf.png" alt="logo">
-            
-                <h3>文本输入框：</h3> <input type="text" name="username" placeholder="用户名"><br>
-                <h3>密码输入框：</h3> <input type="password" name="password" placeholder="密码"><br>
-                <h3>上传文件：</h3> <input type="file" name="file" >
-                <h3>多选输入框：</h3>
-                <dl>
-                    <dt>编程</dt>
-                        <dd><input type="checkbox" name="language" value="JavaScript">JavaScript</dd>
-                        <dd><input type="checkbox" name="language" value="python">python</dd>
-                        <dd><input type="checkbox" name="language" value="c++">C++</dd>  
-                </dl>
-
-
+            <h3>提交按钮：</h3> <input type="submit" name="submit" value="完成">
+            <h3>文本输入：</h3> <input type="text" name="username" placeholder="用户名">
+            <h3>密码输入框：</h3> <input type="password" name="password" placeholder="密码"><br>           
+            <h3>上传文件：</h3> <input type="file" name="file" >
+            <h3>多选输入框：</h3>
+            <dl>
+                <dt>编程</dt>
+                    <dd><input type="checkbox" name="language" value="JavaScript">JavaScript</dd>
+                    <dd><input type="checkbox" name="language" value="python">python</dd>
+                    <dd><input type="checkbox" name="language" value="c++">C++</dd>  
+            </dl>
         </div>
-
         <div class="float">
             <dl><h3>单选属性：</h3> 
                 <dt>性别</dt>
@@ -39,14 +35,15 @@
             <h3>选择日期时间：</h3><input type="datetime-local" name="datetime"><br>
             <h3>email输入框：</h3> <input type="email"  name="email" placeholder="xxx@xx.com"><br>
             <h3>带图片的提交按钮：</h3> <input type="image"  name="girl1" class="img">
-
         </div>
         <div class="float">
             <h3>输入数字：</h3> <input type="number" name="number" >
             <h3>范围取值控件：</h3> <input type="range" name="rangeValue" min="0" max="100" >
             
         </div>
-        <h3>提交按钮：</h3> <input type="submit" value="完成">
     </form>
+    <header>
+
+    </header>
 </body>
 </html>
