form & input = over

--- a/form&input.html
+++ b/form&input.html
@@ -18,30 +18,37 @@
             <h3>多选输入框：</h3>
             <dl>
                 <dt>编程</dt>
-                    <dd><input type="checkbox" name="language" value="JavaScript">JavaScript</dd>
-                    <dd><input type="checkbox" name="language" value="python">python</dd>
-                    <dd><input type="checkbox" name="language" value="c++">C++</dd>  
-            </dl>
+                    <dd><input type="checkbox" name="language" checked value="JavaScript">JavaScript</dd>
+                    <dd><input type="checkbox" name="language" checked value="python">python</dd>
+                    <dd><input type="checkbox" name="language" checked value="c++">C++</dd>  
+                    <dd><input type="checkbox" name="language" checked value="Java">Java</dd>  
+                </dl>
         </div>
         <div class="float">
             <dl><h3>单选属性：</h3> 
                 <dt>性别</dt>
-                <dd>男<input type="radio" name="gender" value="boy" > </dd>
+                <dd>男<input type="radio" name="gender" value="boy" checked> </dd>
                 <dd>女<input type="radio" name="gender" value="girl" > </dd>
             </dl>
             <h3>高亮文本：</h3><p>&lt;mark&gt; 元素用于 <mark>高亮</mark> 文本</p><br>
             <input type="color" name="color"><br>
-            <h3>选择日期：</h3><input type="date" name="date"><br>
+            <h3>选择日期：</h3><input type="date" name="date" ><br>
             <h3>选择日期时间：</h3><input type="datetime-local" name="datetime"><br>
             <h3>email输入框：</h3> <input type="email"  name="email" placeholder="xxx@xx.com"><br>
             <h3>带图片的提交按钮：</h3> <input type="image"  name="girl1" class="img">
         </div>
         <div class="float">
-            <h3>输入数字：</h3> <input type="number" name="number" >
+            <h3>输入数字：</h3> <input type="number" name="number" placeholder="请输入数字">
             <h3>范围取值控件：</h3> <input type="range" name="rangeValue" min="0" max="100" >
-            
+            <h3>重置按钮（不推荐使用）：</h3> <input type="reset" value="恢复默认值">
+            <h3>搜索:</h3> <input type="search" name="search" placeholder="搜索一下"> <input type="submit"  value="搜索">
+            <h3>电话:</h3> <input type="tel" name="tel" placeholder="请输入手机号码"> <input type="submit" >
+            <h3>时间控件：</h3> <input type="time" name="time" >
+            <h3>url:</h3> <input type="url" name="url" placeholder="请输入URL(有验证参数)"> <input type="submit" >
         </div>
     </form>
+    <video src="./img/IMG_7594.MOV" controls></video>
+    <p>哈哈哈。。。</p>
     <header>
 
     </header>
