--- a/form&input.html
+++ b/form&input.html
@@ -47,7 +47,7 @@
             <h3>url:</h3> <input type="url" name="url" placeholder="请输入URL(有验证参数)"> <input type="submit" >
         </div>
     </form>
-    <video src="./img/IMG_7594.MOV" controls></video>
+    <video src="./img/IMG_7594.mp4" controls></video>
     <p>哈哈哈。。。</p>
     <header>
 
