--- a/form&input.html
+++ b/form&input.html
@@ -35,7 +35,7 @@
             <h3>选择日期：</h3><input type="date" name="date" ><br>
             <h3>选择日期时间：</h3><input type="datetime-local" name="datetime"><br>
             <h3>email输入框：</h3> <input type="email"  name="email" placeholder="xxx@xx.com"><br>
-            <h3>带图片的提交按钮：</h3> <input type="image"  name="girl1" class="img">
+            <h3>带图片的提交按钮：</h3> <input type="image"  src="./img/girl1.jpeg" name="girl1" class="img">
         </div>
         <div class="float">
             <h3>输入数字：</h3> <input type="number" name="number" placeholder="请输入数字">
