--- a/form&input.html
+++ b/form&input.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <h1>仙女模样</h1>
-        <video src="./img/IMG_7594.mp4" controls></video>
+        <video src="./img/IMG_7594.mp4" controls autoplay></video>
         <p>哈哈哈。。。</p>
     </header>
     <main>
